fix: tooltip alignment

--- a/src/css/csfloat_styles.css
+++ b/src/css/csfloat_styles.css
@@ -10,7 +10,7 @@
 	display: inline-flex;
 	align-items: center;
 	font-size: 15px;
-	width: auto;
+	width: fit-content;
 }
 
 .betterfloat-sale-tag {
@@ -126,9 +126,7 @@ button.betterfloat-top-button:hover {
 .bf-tooltip:hover .bf-tooltip-inner {
 	visibility: visible;
 	opacity: 0.9;
-	transition:
-		visibility 0s,
-		opacity 0.2s linear;
+	transition: visibility 0s, opacity 0.2s linear;
 }
 
 .bf-tooltip:hover .bf-badge-text {
